target/com/proteus/GV/ANTLRv4/gen/GV_extParser.java
// Generated from GV_ext.g4 by ANTLR 4.5
package com.proteus.GV.ANTLRv4.gen;
 import com.proteus.GV.ext.*; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GV_extParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, Decimal_number=16, 
		Binary_number=17, Octal_number=18, Hex_number=19, Sign=20, Size=21, Non_zero_unsigned_number=22, 
		Unsigned_number=23, Binary_value=24, Octal_value=25, Hex_value=26, Decimal_base=27, 
		Binary_base=28, Octal_base=29, Hex_base=30, Non_zero_decimal_digit=31, 
		Decimal_digit=32, Binary_digit=33, Octal_digit=34, Hex_digit=35, X_digit=36, 
		Z_digit=37, String=38, One_line_comment=39, Block_comment=40, Escaped_identifier=41, 
		Simple_identifier=42, Dollar_Identifier=43, White_space=44;
	public static final int
		RULE_source_text = 0, RULE_module_declaration = 1, RULE_mipd = 2, RULE_list_of_ports = 3, 
		RULE_port_declaration = 4, RULE_module_item = 5, RULE_net_declaration = 6, 
		RULE_list_of_net_identifiers = 7, RULE_net_identifier = 8, RULE_list_of_port_identifiers = 9, 
		RULE_net_decl_assignment = 10, RULE_dimension = 11, RULE_range = 12, RULE_module_instantiation = 13, 
		RULE_module_instance = 14, RULE_list_of_port_connections = 15, RULE_named_port_connection = 16, 
		RULE_continuous_assign = 17, RULE_list_of_net_assignments = 18, RULE_net_assignment = 19, 
		RULE_concatenation = 20, RULE_expression = 21, RULE_range_expression = 22, 
		RULE_primary = 23, RULE_net_lvalue = 24, RULE_hierarchical_path = 25, 
		RULE_number = 26, RULE_arrayed_identifier = 27, RULE_escaped_arrayed_identifier = 28, 
		RULE_escaped_hierarchical_identifier = 29, RULE_escaped_hierarchical_identifier_comp = 30, 
		RULE_hierarchical_identifier = 31, RULE_identifier = 32, RULE_simple_arrayed_identifier = 33, 
		RULE_simple_hierarchical_identifier = 34, RULE_simple_hierarchical_branch = 35, 
		RULE_escaped_hierarchical_branch = 36, RULE_simple_hierarchical_branch_comp = 37, 
		RULE_escaped_hierarchical_branch_comp = 38;
	public static final String[] ruleNames = {
		"source_text", "module_declaration", "mipd", "list_of_ports", "port_declaration", 
		"module_item", "net_declaration", "list_of_net_identifiers", "net_identifier", 
		"list_of_port_identifiers", "net_decl_assignment", "dimension", "range", 
		"module_instantiation", "module_instance", "list_of_port_connections", 
		"named_port_connection", "continuous_assign", "list_of_net_assignments", 
		"net_assignment", "concatenation", "expression", "range_expression", "primary", 
		"net_lvalue", "hierarchical_path", "number", "arrayed_identifier", "escaped_arrayed_identifier", 
		"escaped_hierarchical_identifier", "escaped_hierarchical_identifier_comp", 
		"hierarchical_identifier", "identifier", "simple_arrayed_identifier", 
		"simple_hierarchical_identifier", "simple_hierarchical_branch", "escaped_hierarchical_branch", 
		"simple_hierarchical_branch_comp", "escaped_hierarchical_branch_comp"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'module'", "';'", "'endmodule'", "'('", "','", "')'", "'wire'", 
		"'='", "'['", "':'", "']'", "'.'", "'assign'", "'{'", "'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "Decimal_number", "Binary_number", "Octal_number", 
		"Hex_number", "Sign", "Size", "Non_zero_unsigned_number", "Unsigned_number", 
		"Binary_value", "Octal_value", "Hex_value", "Decimal_base", "Binary_base", 
		"Octal_base", "Hex_base", "Non_zero_decimal_digit", "Decimal_digit", "Binary_digit", 
		"Octal_digit", "Hex_digit", "X_digit", "Z_digit", "String", "One_line_comment", 
		"Block_comment", "Escaped_identifier", "Simple_identifier", "Dollar_Identifier", 
		"White_space"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GV_ext.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GV_extParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Source_textContext extends ParserRuleContext {
		public Source_textContextExt extendedContext;
		public TerminalNode EOF() { return getToken(GV_extParser.EOF, 0); }
		public List<Module_declarationContext> module_declaration() {
			return getRuleContexts(Module_declarationContext.class);
		}
		public Module_declarationContext module_declaration(int i) {
			return getRuleContext(Module_declarationContext.class,i);
		}
		public Source_textContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source_text; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).enterSource_text(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).exitSource_text(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GV_extVisitor ) return ((GV_extVisitor<? extends T>)visitor).visitSource_text(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Source_textContext source_text() throws RecognitionException {
		Source_textContext _localctx = new Source_textContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source_text);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(78);
				module_declaration();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(84);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Module_declarationContext extends ParserRuleContext {
		public Module_declarationContextExt extendedContext;
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public List_of_portsContext list_of_ports() {
			return getRuleContext(List_of_portsContext.class,0);
		}
		public List<MipdContext> mipd() {
			return getRuleContexts(MipdContext.class);
		}
		public MipdContext mipd(int i) {
			return getRuleContext(MipdContext.class,i);
		}
		public Module_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).enterModule_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).exitModule_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GV_extVisitor ) return ((GV_extVisitor<? extends T>)visitor).visitModule_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_declarationContext module_declaration() throws RecognitionException {
		Module_declarationContext _localctx = new Module_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_module_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(T__0);
			setState(87);
			identifier();
			setState(89);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(88);
				list_of_ports();
				}
			}

			setState(91);
			match(T__1);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__8) | (1L << T__12) | (1L << Escaped_identifier) | (1L << Simple_identifier))) != 0)) {
				{
				{
				setState(92);
				mipd();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MipdContext extends ParserRuleContext {
		public MipdContextExt extendedContext;
		public Module_itemContext module_item() {
			return getRuleContext(Module_itemContext.class,0);
		}
		public Port_declarationContext port_declaration() {
			return getRuleContext(Port_declarationContext.class,0);
		}
		public MipdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mipd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).enterMipd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).exitMipd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GV_extVisitor ) return ((GV_extVisitor<? extends T>)visitor).visitMipd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MipdContext mipd() throws RecognitionException {
		MipdContext _localctx = new MipdContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mipd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(100);
				module_item();
				}
				break;
			case 2:
				{
				setState(101);
				port_declaration();
				setState(102);
				match(T__1);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_of_portsContext extends ParserRuleContext {
		public List_of_portsContextExt extendedContext;
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List_of_portsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_of_ports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).enterList_of_ports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).exitList_of_ports(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GV_extVisitor ) return ((GV_extVisitor<? extends T>)visitor).visitList_of_ports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final List_of_portsContext list_of_ports() throws RecognitionException {
		List_of_portsContext _localctx = new List_of_portsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_list_of_ports);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(T__3);
			setState(107);
			identifier();
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(108);
				match(T__4);
				setState(109);
				identifier();
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Port_declarationContext extends ParserRuleContext {
		public Port_declarationContextExt extendedContext;
		public List_of_port_identifiersContext list_of_port_identifiers() {
			return getRuleContext(List_of_port_identifiersContext.class,0);
		}
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public Port_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_port_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).enterPort_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).exitPort_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GV_extVisitor ) return ((GV_extVisitor<? extends T>)visitor).visitPort_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Port_declarationContext port_declaration() throws RecognitionException {
		Port_declarationContext _localctx = new Port_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_port_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(117);
				match(T__6);
				}
			}

			setState(121);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(120);
				range();
				}
			}

			setState(123);
			list_of_port_identifiers();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Module_itemContext extends ParserRuleContext {
		public Module_itemContextExt extendedContext;
		public Net_declarationContext net_declaration() {
			return getRuleContext(Net_declarationContext.class,0);
		}
		public Continuous_assignContext continuous_assign() {
			return getRuleContext(Continuous_assignContext.class,0);
		}
		public Module_instantiationContext module_instantiation() {
			return getRuleContext(Module_instantiationContext.class,0);
		}
		public Module_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).enterModule_item(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).exitModule_item(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GV_extVisitor ) return ((GV_extVisitor<? extends T>)visitor).visitModule_item(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_itemContext module_item() throws RecognitionException {
		Module_itemContext _localctx = new Module_itemContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_module_item);
		try {
			setState(128);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				net_declaration();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				continuous_assign();
				}
				break;
			case Escaped_identifier:
			case Simple_identifier:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				module_instantiation();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Net_declarationContext extends ParserRuleContext {
		public Net_declarationContextExt extendedContext;
		public List_of_net_identifiersContext list_of_net_identifiers() {
			return getRuleContext(List_of_net_identifiersContext.class,0);
		}
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public Net_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_net_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).enterNet_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).exitNet_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GV_extVisitor ) return ((GV_extVisitor<? extends T>)visitor).visitNet_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Net_declarationContext net_declaration() throws RecognitionException {
		Net_declarationContext _localctx = new Net_declarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_net_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(T__6);
			setState(132);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(131);
				range();
				}
			}

			setState(134);
			list_of_net_identifiers();
			setState(135);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_of_net_identifiersContext extends ParserRuleContext {
		public List_of_net_identifiersContextExt extendedContext;
		public List<Net_identifierContext> net_identifier() {
			return getRuleContexts(Net_identifierContext.class);
		}
		public Net_identifierContext net_identifier(int i) {
			return getRuleContext(Net_identifierContext.class,i);
		}
		public List_of_net_identifiersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_of_net_identifiers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).enterList_of_net_identifiers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).exitList_of_net_identifiers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GV_extVisitor ) return ((GV_extVisitor<? extends T>)visitor).visitList_of_net_identifiers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final List_of_net_identifiersContext list_of_net_identifiers() throws RecognitionException {
		List_of_net_identifiersContext _localctx = new List_of_net_identifiersContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_list_of_net_identifiers);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			net_identifier();
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(138);
				match(T__4);
				setState(139);
				net_identifier();
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Net_identifierContext extends ParserRuleContext {
		public Net_identifierContextExt extendedContext;
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public List<DimensionContext> dimension() {
			return getRuleContexts(DimensionContext.class);
		}
		public DimensionContext dimension(int i) {
			return getRuleContext(DimensionContext.class,i);
		}
		public Net_identifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_net_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).enterNet_identifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).exitNet_identifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GV_extVisitor ) return ((GV_extVisitor<? extends T>)visitor).visitNet_identifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Net_identifierContext net_identifier() throws RecognitionException {
		Net_identifierContext _localctx = new Net_identifierContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_net_identifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			identifier();
			setState(151);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(147); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(146);
					dimension();
					}
					}
					setState(149); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__8 );
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_of_port_identifiersContext extends ParserRuleContext {
		public List_of_port_identifiersContextExt extendedContext;
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List_of_port_identifiersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_of_port_identifiers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).enterList_of_port_identifiers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).exitList_of_port_identifiers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GV_extVisitor ) return ((GV_extVisitor<? extends T>)visitor).visitList_of_port_identifiers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final List_of_port_identifiersContext list_of_port_identifiers() throws RecognitionException {
		List_of_port_identifiersContext _localctx = new List_of_port_identifiersContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_list_of_port_identifiers);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			identifier();
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(154);
				match(T__4);
				setState(155);
				identifier();
				}
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Net_decl_assignmentContext extends ParserRuleContext {
		public Net_decl_assignmentContextExt extendedContext;
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Net_decl_assignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_net_decl_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).enterNet_decl_assignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GV_extListener ) ((GV_extListener)listener).exitNet_decl_assignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GV_extVisitor ) return ((GV_extVisitor<? extends T>)visitor).visitNet_decl_assignment(this);
			else return visitor.visitChildren(this);
		}
	}
